<resources>
    <string name="app_name">Incentive</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="app_related">App Related</string>
    <string name="privacy">Privacy</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="about_the_app">About The App</string>
    <string name="dev_related">Development\nRelated</string>
    <string name="rate_the_app">Rate The App</string>
    <string name="share_the_app">Share The App</string>
    <string name="app_moto">Rewards after every task</string>
    <string name="fcm_token">FCM Token: %s</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="settings">Settings</string>
    <string name="reminder_txt">Enter the time for a daily reminder</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bottom_navi">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>